# wbirding

./: README.md  myfreebirding.html
src/: body.css  fonts.css  footer.css  footer.js  general.css  header.css  header.js  index.html  middle.css  middle.js  options.txt
src-tauri/: Cargo.toml  options.txt  tauri.conf.json
src-tauri/src/: main.rs
src-tauri/test/source/: body.css  op_15.txt  options_15.txt  options_bad_different.txt  options_default.txt  options_different.txt  options_splits.txt  small_body.css
src-tauri/test/working/: options.txt
